# sem7

./: .gitignore  CMakeLists.txt  README.md  plot_metrics_ext.py  plot_metrics_robust.py
include/: CacheBase.h  LFU.h  LRU.h  Metrics.h
src/: LFU.cpp  LRU.cpp  Metrics.cpp  main.cpp
